--- a/pages/ejercicio6.html
+++ b/pages/ejercicio6.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/js/09-ejercicio9.js"></script>
- 
-
+ <script src="./ejercicio6.html"></script>
 </body>
 </html>
