se agrego en el Index una lista de link de cada ejercicio Js y se le creo un diseño

--- a/pages/ejercicio1.html
+++ b/pages/ejercicio1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercici1 Js</title>
+    <title>Ejercicio1_Js</title>
 </head>
 <body>
     <script src="/js/01-ejercicio1.js"></script>
