--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="/js/09-ejercicio9.js"></script>
- 
-
-</body>
+<html data-bs-theme="dark" lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="ejercicios javascript" />
+    <meta name="description" content="Tp1 Js Rolling Code" />
+    <meta name="author" content="Bruno Cordoba" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <title>Tp1_Js_RollingCode</title>
+  </head>
+  <body>
+    
+    <section class="container my-5 py-5 bg-secondary rounded-5">
+        <h1 class="text-center">Ejercicios Js Tp1</h1>
+      <section class="row justyfi-content-center my-5">
+        <div class="col-lg- text-center">
+        <ul class="list-unstyled fs-3">
+          <li><a class="text-warning" href="./pages/ejercicio1.html">Ejercicio_1_Js</a></li>
+          <li><a class="text-warning" href="./pages/ejercicio2.html">Ejercicio_2_Js</a></li>
+          <li><a class="text-warning" href="./pages/ejercicio3.html">Ejercicio_3_Js</a></li>
+          <li><a class="text-warning" href="./pages/ejercicio4.html">Ejercicio_4_Js</a></li>
+          <li><a class="text-warning" href="./pages/ejercicio5.html">Ejercicio_5_Js</a></li>
+          <li><a class="text-warning" href="./pages/ejercicio6.html">Ejercicio_6_Js</a></li>
+          <li><a class="text-warning" href="./pages/ejercicio7.html">Ejercicio_7_Js</a></li>
+          <li><a class="text-warning" href="./pages/ejercicio8.html">Ejercicio_8_Js</a></li>
+          <li><a class="text-warning" href="./pages/ejercicio9.html">Ejercicio_9_Js</a></li>
+          <li><a class="text-warning" href="./pages/ejercicio10.html">Ejercicio_10_Js</a></li>
+          <li><a class="text-warning" href="./pages/ejercicio11.html">Ejercicio_11_Js</a></li>
+        </ul>
+    </div>
+      </section>
+    </section>
+  </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
 </html>
