--- a/pages/ejercicio11.html
+++ b/pages/ejercicio11.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio11_Js</title>
 </head>
 <body>
     <script src="/js/11-ejercicio11.js"></script>
