--- a/pages/ejercicio2.html
+++ b/pages/ejercicio2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ejercicio2 Js</title>
+    <title>ejercicio2_Js</title>
 </head>
 <body>
     <script src="/js/02-ejercicio2.js"></script>
