--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Tp1_Js_RollingCode</title>
   </head>
   <body>
-    
+    <script src="js/03-ejercicio3.js"></script>
     <section class="container my-5 py-5 bg-secondary rounded-5">
         <h1 class="text-center">Ejercicios Js Tp1</h1>
       <section class="row justyfi-content-center my-5">
